test/libsolidity/syntaxTests/modifiers/invalid_parameter_indexed.sol
contract B {
    modifier mod1(uint indexed a) { _; }
}
// ----
// ParserError 2314: (36-43): Expected ',' but got 'indexed'
